--- a/slides/2025_dqe/index.qmd
+++ b/slides/2025_dqe/index.qmd
@@ -47,7 +47,7 @@ EVs are clean; electricity is clean, but the source of electricity might not be 
 Why is that? Well, unmanaged BEV charging may generate carbon dioxide and other air pollution due to high demand on the grid. 
 That's why we need managed charging to ensure clean energy as well as keep the price low.
 
-Smart charging is a type of managed charging, which includes Supplier-Managed Charging, aka SMC, and Vehicle-to-Grid, aka V2G.
+Smart charging is a type of managed charging, which includes Supplier-Managed Charging, shortened as SMC, and Vehicle-to-Grid, shortened as V2G.
 :::
 
 ## SMC - Supplier Managed Charging
@@ -59,11 +59,9 @@ Smart charging is a type of managed charging, which includes Supplier-Managed Ch
 ![](figs/education_1_half.png){fig-align="center"}
 
 ::: {.notes}
-For SMC, aka Supplier-Managed Charging, it smooths out the overnight EV charging demand.
+For SMC, Supplier-Managed Charging, it smooths out the overnight EV charging demand.
 
 As you can see, with unmanaged charging, the BEV load easily passes over the capacity threshold.
-
-But with SMC, the electricity demand is controlled below the threshold. It reduces the peak demand and saves money.
 :::
 
 ## SMC - Supplier Managed Charging
@@ -75,10 +73,6 @@ But with SMC, the electricity demand is controlled below the threshold. It reduc
 ![](figs/education_1.png){fig-align="center"}
 
 ::: {.notes}
-For SMC, aka Supplier-Managed Charging, it smooths out the overnight EV charging demand.
-
-As you can see, with unmanaged charging, the BEV load easily passes over the capacity threshold.
-
 But with SMC, the electricity demand is controlled below the threshold. It reduces the peak demand and saves money.
 :::
 
@@ -168,7 +162,7 @@ smc_attributes_kable
 ::: {.notes}
 We used formr to design the survey. It's an open-source survey platform that supports R coding. In this survey, we have conjoint questions to ask for willingness to participate, and multiple choice questions to collect demographic information.
 
-On the right side is a sample list of conjoint attributes. They represent the smart charging features of a program. We'll talk in details in later slides.
+On the right side is a sample list of conjoint attributes. They represent the smart charging features of a program. We'll talk in details.
 :::
 
 ## Conjoint Question Explained
@@ -285,7 +279,7 @@ v2g_options_kable
 :::
 
 ::: {.notes}
-This is the conjoint question design for V2G programs. V2G is short for Vehicle-to-Grid. The attributes are similar to SMC, but with some differences. For example, we have occurrence cash and monthly occurrence instead of override.
+This is the conjoint question design for V2G programs. V2G is short for Vehicle-to-Grid. The attributes are similar to SMC, but with some differences. For example, we have monthly occurrence instead of monthly override.
 
 The battery thresholds are in the same layout, but since V2G drains the battery, the lower bound is how much the battery is drained to, and guaranteed battery is how much it's charged back to.
 :::
@@ -295,7 +289,7 @@ The battery thresholds are in the same layout, but since V2G drains the battery,
 ![](figs/smc_question.jpg){fig-align="center"}
 
 ::: {.notes}
-There are 6 SMC conjoint questions. In each question, participants are provided with 2 valid options and a "Not Interested" option. It's important to have this "Not Interested" option as a validation of the willingness of the participants.
+There are 6 SMC conjoint questions. In each question, participants are provided with 2 valid options and a "Not Interested" option. It's important to have this "Not Interested" option, because it is a validation of willingness. When participants choose these 2 value options, they are surely to be interested in what they choose. Otherwise, they will choose "Not Interested".
 :::
 
 ## Sample V2G Question
@@ -303,7 +297,7 @@ There are 6 SMC conjoint questions. In each question, participants are provided 
 ![](figs/v2g_question.jpg){fig-align="center"}
 
 ::: {.notes}
-Likewise, there are 6 V2G conjoint questions as well.
+Likewise, there are 6 V2G conjoint questions.
 :::
 
 ## Survey Fielding - 1356 in Total
@@ -384,7 +378,7 @@ Without compensation, users will not participate.
 :::
 
 ::: {.notes}
-The willingness to participate is quantified with the multinomial logit model, shortened as MNL. The utility of each option is a linear combination of the attributes, which is the $v_j$ here, plus an error term, shown as $epsilon_j$. The probability of choosing an option is the exponential of its utility divided by the sum of exponentials of all utilities.
+The willingness to participate is quantified with the multinomial logit model, shortened as MNL. The utility of each option is a linear combination of the attributes, which is the $v_j$ here, plus an error term, shown as $\epsilon_j$. The probability of choosing an option is the exponential of its utility divided by the sum of exponentials of all utilities.
 
 Here are the coefficient estimate plots of both programs. As you can see, the "No Choice" has highgest coefficient, which simply means that without compensation, users will not participate in the programs.
 
@@ -397,8 +391,6 @@ However, coefficients alone are not enough to interpret the willingness to parti
 
 ::: {.notes}
 This is one example of the sensitivity plots. As the enrollment cash increases, the user enrollment increases as well. The solid part is from the results, and the dotted part is the extrapolation with the model.
-
-And here we have a full demonstration of all sensitivity plots. Steeper slope indicates higher sensitivity. Also, as the feature values become higher, we see diminishing returns. But the solid parts are basically linear.
 :::
 
 ## Enrollment Sensitivity
@@ -411,8 +403,6 @@ And here we have a full demonstration of all sensitivity plots. Steeper slope in
 :::
 
 ::: {.notes}
-This is one example of the sensitivity plots. As the enrollment cash increases, the user enrollment increases as well. The solid part is from the results, and the dotted part is the extrapolation with the model.
-
 And here we have a full demonstration of all sensitivity plots. Steeper slope indicates higher sensitivity. Also, as the feature values become higher, we see diminishing returns. But the solid parts are basically linear.
 :::
 
@@ -479,13 +469,11 @@ v2g_attr_equiv %>%
 :::
 
 ::: {.notes}
-Following the linearity of the sensitivity plots, there is a convenient way to reveal the equivalencies of enrollment increases. Here for each program, we start from its baseline. We increase each feature value individually, and see how much each one needs to be, in order to achieve a 5% enrollment increase. And here are our interpretations:
+Because the sensitivity plots are linear in the areas we concern, there is a convenient way to reveal the relevant importance of each feature. Imagine we want to increase 5% of enrollment for each program. We start from baseline, and increase each feature value individually. Then we can see how much each one needs to be, in order to achieve the 5% enrollment increase. And here are our interpretations:
 
 To start with, smaller value indicates higher efficiency, and recurring incentives are more important thant one-time. For example, in SMC, the enrollment cash needs to be \$64.7 to achieve a 5% enrollment increase, while for monthly cash, it only needs to be \$3.2. So monthly cash is more efficient than enrollment cash. Same is true for the 2 types of cash in V2G.
 
-Also, guaranteed threshold is more important in SMC than in V2G, indicating range anxiety.
-
-Finally, monetary incentives are valued more in V2G than in SMC. This indicates that BEV owners are willing to leverage their BEVs as a source of income.
+Also, guaranteed threshold is more important in SMC than in V2G, indicating range anxiety. Finally, monetary incentives are valued more in V2G than in SMC. This indicates that BEV owners are willing to leverage their BEVs as a source of income.
 :::
 
 ## SMC Scenario Analysis
@@ -498,7 +486,9 @@ Finally, monetary incentives are valued more in V2G than in SMC. This indicates 
 :::
 
 ::: {.notes}
-So, after analysis of all these individual features, we can combine them into programs. We call them "scenarios". Here for SMC we have 3 scenarios. They are flexibility, recurring cash, and one-time cash designated.
+So, after analysis of all these individual features, we can combine them into programs. We call them "scenarios". I want to emphasize that the purpose of doing these evaluations is to wisely allocate the resources of the grid. Therefore, we need to maximize the enrollment of each program with least efforts.
+
+Here for SMC we have 3 scenarios. They are flexibility, recurring cash, and one-time cash designated.
 
 As we can see, for SMC, flexibility is highly valued, and recurring incentives are more important than one-time. So due to the range anxiety, payment alone is not enough. There should be a combination of flexibility and monetary incentives.
 :::
@@ -513,7 +503,7 @@ As we can see, for SMC, flexibility is highly valued, and recurring incentives a
 :::
 
 ::: {.notes}
-For V2G programs, recurring incentives are also more important than one-time, flexibility is compromised since ownrs are willing to use leverage their BEVs as a source of income. So the V2G programs are more incentive powered than SMC programs.
+For V2G programs, recurring incentives are also more important than one-time. But flexibility is compromised since owners are willing to use their BEVs as a source of income. So the V2G programs are more incentive powered than SMC programs.
 :::
 
 ## Smart Charging Enrollment Simulator {style="text-align: center;"}
