--- a/slides/2025_dqe/index.qmd
+++ b/slides/2025_dqe/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Consumer Preferences for BEV<br>Smart Charging Programs"
-subtitle: "DQE Part II 2025"
+subtitle: "DQE Part II 2025<br>Funded by the Alfred P. Sloan Foundation"
 author: "Pingfan Hu"
 format:
   revealjs: 
@@ -490,8 +490,6 @@ And here we have a full demonstration of all sensitivity plots. Steeper slope in
 ### SMC {style="text-align: center; font-size: 36px; color: #739C69;"}
 
 ```{r}
-library(kableExtra)
-
 smc_attr_equiv <- data.frame(
   Attribute = c("Enrollment Cash", "Monthly Cash", "Override Days",
                 "Minimum Threshold", "Guaranteed Threshold"),
@@ -598,5 +596,73 @@ Here we've made a smart charging enrollment simulator. We can play around with i
 1. First **large N** study of BEV owners' preferences for smart charging programs.
 2. Quantified the **sensitivity** of BEV owners' preferences for smart charging features.
 3. Introduced the concept of attribute **equivalencies** to inform incentive design.
+
+## Appendix - SMC Logit Model {.smaller}
+
+$$
+\begin{align*}
+u_j = \beta_1 x_j^{\text{enroll_cash}} + \beta_2 x_j^{\text{monthly_cash}} + \beta_3 \delta_j^{\text{override_allowed}} + \beta_4 x_j^{\text{num_overrides}} \notag \\ + \beta_5 x_j^{\text{min_threshold}} + \beta_6 x_j^{\text{guaranteed_threshold}} + \beta_7 \delta_j^{\text{no_choice}} + \epsilon_j
+\end{align*}
+$$
+
+::: {style="border: 2px solid #333; border-radius: 8px;"}
+
+```{r}
+smc_coef <- data.frame(
+  Attribute = c("Enrollment Cash", "Monthly Cash", "Override Days", 
+                "Override Flag", "Minimum Threshold", "Guaranteed Threshold", "No Choice"),
+  `Coef.` = c("β₁", "β₂", "β₃", "β₄", "β₅", "β₆", "β₇"),
+  `Est.` = c(0.0031, 0.0623, 0.1010, 0.3622, 0.0037, 0.0362, 3.0026),
+  SE = c(0.0002, 0.0027, 0.0118, 0.0538, 0.0021, 0.0021, 0.1779),
+  Level = c("50, 100, 200, 300", "2, 5, 10, 15, 20", "0, 1, 3, 5", 
+            "Yes, No", "20, 30, 40", "60, 70, 80", "-"),
+  Unit = c("USD", "USD", "Days", "-", "%", "%", "-")
+)
+
+smc_table <- kable(smc_coef, booktabs = TRUE, 
+                   align = c("l", "c", "c", "c", "c", "c"),
+                   escape = FALSE) %>%
+  kable_styling(latex_options = c("striped", "scale_down")) %>%
+  row_spec(0, bold = TRUE) %>%
+  add_header_above(c(" " = 6))
+
+smc_table
+```
+
+:::
+
+## Appendix - V2G Logit Model {.smaller}
+
+$$
+\begin{align*}
+u_j = \beta_1 x_j^{\text{enroll_cash}} + \beta_2 x_j^{\text{occur_cash}} + \beta_3 x_j^{\text{num_occurrences}} + \beta_4 x_j^{\text{lower_threshold}} \notag \\ + \beta_5 x_j^{\text{guaranteed_threshold}} + \beta_6 \delta_j^{\text{no_choice}} + \epsilon_j
+\end{align*}
+$$
+
+::: {style="border: 2px solid #333; border-radius: 8px;"}
+
+```{r}
+v2g_coef <- data.frame(
+  Attribute = c("Enrollment Cash", "Occurrence Cash", "Monthly Occurrence", 
+                "Lower Threshold", "Guaranteed Threshold", "No Choice"),
+  `Coef.` = c("β₁", "β₂", "β₃", "β₄", "β₅", "β₆"),
+  `Est.` = c(0.0045, 0.0863, 0.1305, 0.0237, 0.0278, 2.8759),
+  SE = c(0.0026, 0.0040, 0.0217, 0.0030, 0.0030, 0.2647),
+  Level = c("50, 100, 200, 300", "2, 5, 10, 15, 20", "1, 2, 3, 4", 
+            "20, 30, 40", "60, 70, 80", "-"),
+  Unit = c("USD", "USD", "Times", "%", "%", "-")
+)
+
+v2g_table <- kable(v2g_coef, booktabs = TRUE, 
+                   align = c("l", "c", "c", "c", "c", "c"),
+                   escape = FALSE) %>%
+  kable_styling(latex_options = c("striped", "scale_down")) %>%
+  row_spec(0, bold = TRUE) %>%
+  add_header_above(c(" " = 6))
+
+v2g_table
+```
+
+:::
 
 ## Reference List
